# FixNow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3b22e170e45c_cria_tabela_professionals.py  e4cf942c3fc8_criacao_tabela_usuarios.py
app/: main.py
app/api/routes/: auth.py  matching.py  professionals.py  users.py
app/core/: config.py  database.py  security.py
app/models/: professional.py  user.py
app/schemas/: matching.py  professional.py  user.py
app/services/: matching_service.py  professional_service.py  trust_score_service.py  user_service.py
docs/: PROMPT_ANTIGRAVITY_SETUP.md
openspec/: AGENTS.md
openspec/changes/002-profissionais-trust-score/: design.md  proposal.md  tasks.md
openspec/changes/003-matching/: tasks.md
openspec/proposals/: 001-setup-inicial.md
openspec/templates/: proposal-template.md
simulation/: matching_simulation.py
tests/: conftest.py  test_matching.py  test_professionals.py  test_trust_score.py  test_users.py
